subprojects/groovy-parser-antlr4/src/test/resources/fail/Void_02x.groovy
class MyClass {
    def foo() {
        void bar = null
    }
}
